--- a/src/app/view-child/view-child.component.html
+++ b/src/app/view-child/view-child.component.html
@@ -4,4 +4,5 @@
   <br>
   <button (click)="toggle()">Toggle</button>
   <div>Selected: {{selectedPane}}</div>
+  <p #greet>Hello {{name}}</p>
 </div>
