--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -6,7 +6,7 @@
     <!-- *ngFor 不能直接使用 Observable。 不过，它后面还有一个管道字符（|），后面紧跟着一个 async，它表示 Angular 的 AsyncPipe。 -->
     <!-- AsyncPipe 会自动订阅到 Observable，这样你就不用再在组件类中订阅了。 -->
     <li *ngFor="let hero of heroes$ | async">
-      <a routerLink="/detail/${hero.id}">
+      <a routerLink="/detail/{{hero.id}}">
         {{hero.name}}
       </a>
     </li>
