--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   <app-messages></app-messages>
   <view-child highlight></view-child>
   <p highlight>Angular2是Google推出的第二代Web开发框架</p>
-  <child [message]="msgToChild" (outer)="receive($event)"></child>
+  <child [message]="msgToChild" (messageChange)="receive($event)"></child>
   <p>{{msgFromChild}}</p>
 </div>
